[gd_scene load_steps=6 format=3 uid="uid://bbc6aodw650sn"]

[ext_resource type="Script" path="res://Inventory.gd" id="1_jupmd"]
[ext_resource type="PackedScene" uid="uid://tbnvg80aq7tm" path="res://UI/InventoryButton.tscn" id="2_agbh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfdmd"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.419608)

[sub_resource type="CircleShape2D" id="CircleShape2D_g36f8"]
radius = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ix0l2"]
size = Vector2(41, 37)

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jupmd")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 477.0
offset_top = 186.0
offset_right = 671.0
offset_bottom = 468.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rfdmd")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -128.0
offset_right = 89.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
offset_right = 178.0
offset_bottom = 231.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 4

[node name="Button" type="Button" parent="."]
offset_left = 993.0
offset_top = 582.0
offset_right = 1137.0
offset_bottom = 637.0
text = "Add Item"

[node name="Button2" type="Button" parent="."]
offset_left = 818.0
offset_top = 582.0
offset_right = 962.0
offset_bottom = 637.0
text = "Remove Item"

[node name="Button4" type="Button" parent="."]
offset_left = 647.0
offset_top = 582.0
offset_right = 791.0
offset_bottom = 637.0
text = "Add Item 2"

[node name="Button5" type="Button" parent="."]
offset_left = 472.0
offset_top = 582.0
offset_right = 616.0
offset_bottom = 637.0
text = "Remove Item 2"

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource("CircleShape2D_g36f8")

[node name="InventoryButton" parent="MouseArea" instance=ExtResource("2_agbh5")]
visible = false
offset_left = 3.0
offset_top = 2.0
offset_right = 43.0
offset_bottom = 42.0

[node name="Button3" type="Button" parent="."]
offset_left = 630.0
offset_top = 431.0
offset_right = 667.0
offset_bottom = 465.0
text = "T"

[node name="TrashArea" type="Area2D" parent="Button3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button3/TrashArea"]
position = Vector2(18.5, 16.5)
shape = SubResource("RectangleShape2D_ix0l2")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="Button5" to="." method="_on_button_5_button_down"]
[connection signal="area_entered" from="MouseArea" to="." method="_on_mouse_area_area_entered"]
[connection signal="area_exited" from="MouseArea" to="." method="_on_mouse_area_area_exited"]
[connection signal="area_entered" from="Button3/TrashArea" to="." method="_on_trash_area_area_entered"]
[connection signal="area_exited" from="Button3/TrashArea" to="." method="_on_trash_area_area_exited"]
